--- a/build.properties
+++ b/build.properties
@@ -3,8 +3,8 @@ src.dir=src
 build.dir=build
 jar.dir=${build.dir}/jar
 classes.dir=${build.dir}/classes
-main.class=se.mspi.${project.name}.Main
-test.class=se.mspi.${project.name}.HitCheckerTest
+main.class=${project.name}.Main
+test.class=HitCheckerTest
 version=1
 scp.port=2222
 scp.host=se.ifmo.ru
